style(init): rearrage messages in get-started scripts

--- a/install
+++ b/install
@@ -291,6 +291,9 @@ for shell in "${shells[@]}"; do
 done
 
 mucl
+print_info 1 "For more details, visit: " 0
+print_as 0 "magenta" "bold" "${CUSTOM_GIT_WEBSITE_URL}/get-started" 2
+
 banner_color 0 "magenta" "*" "Installation complete - custom-git ${version}" 2
 
 print_info 0 "Restart your shell or reload config file." 1
@@ -310,6 +313,3 @@ for shell in "${shells[@]}"; do
             ;;
     esac
 done
-
-print_info 1 "For more details, visit: " 0
-print_as 0 "magenta" "bold" "${CUSTOM_GIT_WEBSITE_URL}" 2
