style(init): output logs of init scripts

--- a/install
+++ b/install
@@ -301,8 +301,8 @@ for shell in "${shells[@]}"; do
 done
 
 mucl
-print_info 1 "For more details, visit: " 0
-print_as 0 "magenta" "bold" "${CUSTOM_GIT_WEBSITE_URL}/get-started" 2
+print_info 0 "For more details, visit: " 0
+print_as 0 "magenta" "bold" "${CUSTOM_GIT_WEBSITE_URL}" 2
 
 banner_color 0 "magenta" "*" "Installation complete - custom-git ${latestVersion}" 2
 
@@ -323,3 +323,5 @@ for shell in "${shells[@]}"; do
             ;;
     esac
 done
+
+echo
