refactor(install): improve success and failure logs

--- a/install
+++ b/install
@@ -169,46 +169,46 @@ function get_latest_annotated_tag() {
 function install_clipboard() {
 
     if ! $(is_command_installed "npm"); then
-        banner_color_err 1 "npm not installed." 2
+        banner_color_err 1 "npm not installed" 1
         return ${FAILURE}
     fi
     print_info 0 "installing clipboard-cli ..." 1
     npm install -g clipboard-cli &> /dev/null
     if (( $? != SUCCESS )); then
         mucl 1
-        banner_color 0 "black" "~" "couldn't install clipboard-cli" 2
+        banner_color 0 "black" "~" "couldn't install clipboard-cli" 1
         return ${FAILURE}
     fi
     mucl 1
-    banner_color 0 "magenta" "*" "clipboard-cli installed" 2
+    banner_color 0 "magenta" "*" "clipboard-cli installed" 1
 }
 
 function install_fzf() {
 
-    print_info 0 "installing fzf ..." 1
+    print_info 1 "installing fzf ..." 1
 
     git clone --depth 1 https://github.com/junegunn/fzf.git "${FZF_HOME}" &> /dev/null
     if (( $? != SUCCESS )); then
         mucl
-        banner_color_err 0 "couldn't fetch fzf! please check your network" 2
+        banner_color_err 0 "couldn't fetch fzf! please check your network" 1
         return ${FAILURE}
     fi
 
     cd "${FZF_HOME}" || {
         mucl
-        banner_color_err 0 "couldn't enter directory: ${FZF_HOME}" 2
+        banner_color_err 0 "couldn't enter directory: ${FZF_HOME}" 1
         return ${FAILURE}
     }
     ./install --all &> /dev/null
 
     if (( $? != SUCCESS )); then
         mucl
-        banner_color_err 0 "fzf installation failed" 2
+        banner_color_err 0 "fzf installation failed" 1
         return ${FAILURE}
     fi
 
     mucl
-    banner_color 0 "magenta" "*" "fzf installed" 2
+    banner_color 0 "magenta" "*" "fzf installed" 1
 }
 
 function finish {
@@ -222,8 +222,6 @@ trap finish EXIT
 #####################
 # Enable custom-git #
 #####################
-
-insert_new_lines 1
 
 shells=("bash" "zsh")
 numShells=${#shells[@]}
@@ -254,7 +252,9 @@ if ! $(is_command_installed "clipboard"); then
     if (( $? != SUCCESS )); then
         print_info 0 "please install clipboard-cli from " 0
         print_as 0 "magenta" "bold" "https://github.com/sindresorhus/clipboard-cli#install" 1
-        print_info 0 "some custom-git features will not work without it" 2
+        print_info 0 "some custom-git features will not work without it" 1
+        print_info 0 "for more details, visit: " 0
+        print_as 0 "magenta" "bold" "${CUSTOM_GIT_WEBSITE_URL}/explorer/show/commit-logs" 1
     fi
 fi
 
@@ -274,13 +274,13 @@ if [[ -d "${CUSTOM_GIT_HOME}" ]]; then
     exit ${SUCCESS}
 fi
 
-print_info 0 "installing custom-git..." 1
+print_info 1 "installing custom-git..." 1
 git clone --recurse-submodules "${CUSTOM_GIT_CLONE_URL}" "${CUSTOM_GIT_HOME}" &> /dev/null
 assert_success "couldn't fetch custom-git! please check your network"
 
 if [[ ! -d "${CUSTOM_GIT_HOME}" ]]; then
     mucl
-    banner_color_err 0 "$(printf "installation failure! couldn't create the directory %s" "${prefix}")" 2
+    banner_color_err 0 "installation failure! couldn't create the directory ${prefix}" 2
     exit ${FAILURE}
 fi
 
@@ -300,10 +300,9 @@ for shell in "${shells[@]}"; do
 done
 
 mucl
-print_info 0 "for more details, visit: " 0
-print_as 0 "magenta" "bold" "${CUSTOM_GIT_WEBSITE_URL}" 2
-
 banner_color 0 "magenta" "*" "installation complete - custom-git ${latestVersion}" 2
+print_info 0 "to browse custom-git features, visit: " 0
+print_as 0 "magenta" "bold" "${CUSTOM_GIT_WEBSITE_URL}/explorer" 2
 
 print_info 0 "restart your shell or reload config file" 1
 for shell in "${shells[@]}"; do
