--- a/install
+++ b/install
@@ -304,7 +304,7 @@ banner_color 0 "magenta" "*" "installation complete - custom-git ${latestVersion
 print_info 0 "to browse custom-git features, visit: " 0
 print_as 0 "magenta" "bold" "${CUSTOM_GIT_WEBSITE_URL}/explorer" 1
 
-print_info 1 "restart your shell or reload config file" 1
+print_info 1 "to enable custom-git, restart your shell session or reload config file with the following command:" 1
 for shell in "${shells[@]}"; do
     case "${shell}" in
         bash)
