--- a/install
+++ b/install
@@ -300,11 +300,11 @@ for shell in "${shells[@]}"; do
 done
 
 mucl
-banner_color 0 "magenta" "*" "installation complete - custom-git ${latestVersion}" 2
-print_info 0 "to browse custom-git features, visit: " 0
+banner_color 0 "magenta" "*" "installation complete - custom-git ${latestVersion}" 1
+print_info 0 "to browse the custom-git features, visit: " 0
 print_as 0 "magenta" "bold" "${CUSTOM_GIT_WEBSITE_URL}/explorer" 1
 
-print_info 1 "to enable custom-git, restart your shell session or reload config file with the following command:" 1
+print_info 1 "to enable custom-git, restart your shell session or reload the config file with the following command:" 1
 for shell in "${shells[@]}"; do
     case "${shell}" in
         bash)
